Fixed alignment of icon and title

--- a/flightline-capstone/src/app/header/header.component.css
+++ b/flightline-capstone/src/app/header/header.component.css
@@ -1,5 +1,6 @@
 p {
   display: inline-block;
+  padding-right: .25em;
 }
 
 
